--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,107 +1,18 @@
+[tool.poetry]
+name = "scrappy-doo"
+version = "0.1.0"
+description = "Modular scraping system with Streamlit UI"
+authors = ["Your Name <your@email.com>"]
+
+[tool.poetry.dependencies]
+python = "^3.9"
+streamlit = "^1.27.0"
+mkdocs-material = "^9.5.0"
+mkdocs-material-imaging = { version = "*", optional = true }
+mkdocstrings = "^0.24.0"
+mkdocstrings-python = "^1.6.0"
+black = "^23.9.1"
+
 [build-system]
-requires = ["setuptools>=61.0", "wheel"]
-build-backend = "setuptools.build_meta"
-
-[project]
-name = "scrapling"
-dynamic = ["version"]
-description = "Scrapling is an undetectable, powerful, flexible, high-performance Python library that makes Web Scraping easy and effortless as it should be!"
-readme = {file = "README.md", content-type = "text/markdown"}
-license = {file = "LICENSE"}
-authors = [
-    {name = "Karim Shoair", email = "karim.shoair@pm.me"}
-]
-maintainers = [
-    {name = "Karim Shoair", email = "karim.shoair@pm.me"}
-]
-keywords = [
-    "web-scraping",
-    "scraping",
-    "automation",
-    "browser-automation",
-    "data-extraction",
-    "html-parsing",
-    "undetectable",
-    "playwright",
-    "selenium-alternative",
-    "web-crawler",
-    "browser",
-    "crawling",
-]
-requires-python = ">=3.10"
-classifiers = [
-    "Operating System :: OS Independent",
-    "Development Status :: 4 - Beta",
-    # "Development Status :: 5 - Production/Stable",
-    # "Development Status :: 6 - Mature",
-    # "Development Status :: 7 - Inactive",
-    "Intended Audience :: Developers",
-    "Intended Audience :: Information Technology",
-    "License :: OSI Approved :: BSD License",
-    "Natural Language :: English",
-    "Topic :: Internet :: WWW/HTTP",
-    "Topic :: Internet :: WWW/HTTP :: Browsers",
-    "Topic :: Text Processing :: Markup",
-    "Topic :: Text Processing :: Markup :: HTML",
-    "Topic :: Scientific/Engineering :: Artificial Intelligence",
-    "Topic :: Software Development :: Libraries",
-    "Topic :: Software Development :: Libraries :: Python Modules",
-    "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3 :: Only",
-    "Programming Language :: Python :: 3.10",
-    "Programming Language :: Python :: 3.11",
-    "Programming Language :: Python :: 3.12",
-    "Programming Language :: Python :: 3.13",
-    "Programming Language :: Python :: Implementation :: CPython",
-    "Typing :: Typed",
-]
-dependencies = [
-    "lxml>=6.0.1",
-    "cssselect>=1.3.0",
-    "orjson>=3.11.3",
-    "tldextract>=5.3.0",
-]
-
-[project.optional-dependencies]
-fetchers = [
-    "click>=8.3.0",
-    "curl_cffi>=0.13.0",
-    "playwright>=1.55.0",
-    "patchright>=1.55.2",
-    "camoufox>=0.4.11",
-    "geoip2>=5.1.0",
-    "msgspec>=0.19.0",
-]
-ai = [
-    "mcp>=1.14.1",
-    "markdownify>=1.2.0",
-    "scrapling[fetchers]",
-]
-shell = [
-    "IPython>=8.37",  # The last version that supports Python 3.10
-    "markdownify>=1.2.0",
-    "scrapling[fetchers]",
-]
-all = [
-    "scrapling[ai,shell]",
-]
-
-[project.urls]
-Homepage = "https://github.com/D4Vinci/Scrapling"
-Documentation = "https://scrapling.readthedocs.io/en/latest/"
-Repository = "https://github.com/D4Vinci/Scrapling"
-"Bug Tracker" = "https://github.com/D4Vinci/Scrapling/issues"
-
-[project.scripts]
-scrapling = "scrapling.cli:main"
-
-[tool.setuptools]
-zip-safe = false
-include-package-data = true
-
-[tool.setuptools.dynamic]
-version = {attr = "scrapling.__version__"}
-
-[tool.setuptools.packages.find]
-where = ["."]
-include = ["scrapling*"]
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
