--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Modular scraping system with Streamlit UI"
 authors = ["Your Name <you@example.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = ">=3.9.7,<3.9.9"
 streamlit = "^1.27.0"
 mkdocs-material = { version = "^9.5.0", extras = ["imaging"] }
 mkdocstrings = "^0.24.0"
