--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,9 +1,2 @@
-# Final fix to silence bs4 issues on Streamlit Cloud
-
-streamlit==1.27.2
-beautifulsoup4==4.12.2
-bs4==0.0.2
-mkdocs-material==9.5.10
-mkdocstrings==0.24.0
-mkdocstrings-python==1.6.0
-black==23.9.1
+streamlit
+beautifulsoup4
